Quicksort after bug fixing